--- a/Foods/index.html
+++ b/Foods/index.html
@@ -17,17 +17,18 @@
     <div class="container">
         <section class="section-1">
             <h1 class="section-heading">Variety of Foods</h1>
-            <div class="section-1-icons"></div>
-            <i class="fas fa-egg"></i>
-            <i class="fas fa-stroopwafel"></i>
-            <i class="fas fa-cheese"></i>
-            <i class="fas fa-hotdog"></i>
-            <i class="fas fa-drumstick-bite"></i>
-            <i class="fas fa-apple-alt"></i>
-            <i class="fas fa-ice-cream"></i>
-            <i class="fas fa-fish"></i>
-            <i class="fas fa-cookie"></i>
-            <i class="fas fa-seedling"></i>
+            <div class="section-1-icons">
+                <i class="fas fa-egg"></i>
+                <i class="fas fa-stroopwafel"></i>
+                <i class="fas fa-cheese"></i>
+                <i class="fas fa-hotdog"></i>
+                <i class="fas fa-drumstick-bite"></i>
+                <i class="fas fa-apple-alt"></i>
+                <i class="fas fa-ice-cream"></i>
+                <i class="fas fa-fish"></i>
+                <i class="fas fa-cookie"></i>
+                <i class="fas fa-seedling"></i>
+            </div>
         </section>
     </div>
     <script src="script.js"></script>
