--- a/Foods/index.html
+++ b/Foods/index.html
@@ -15,10 +15,11 @@
 
 <body>
     <div class="container">
+        <!-- Section 1 -->
         <section class="section-1">
             <h1 class="section-heading">Variety of Foods</h1>
             <div class="section-1-icons">
-                <i class="fas fa-egg"></i>
+                <i class="change fas fa-egg"></i>
                 <i class="fas fa-stroopwafel"></i>
                 <i class="fas fa-cheese"></i>
                 <i class="fas fa-hotdog"></i>
@@ -30,8 +31,8 @@
                 <i class="fas fa-seedling"></i>
             </div>
         </section>
-    </div>
-    <script src="script.js"></script>
+        <!-- End Section 1 -->
+        <script src="script.js"></script>
 </body>
 
 </html>
