--- a/Foods/index.html
+++ b/Foods/index.html
@@ -62,46 +62,52 @@
             <h1 class="section-heading">Gallery</h1>
             <div class="gallery">
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="images/gallery-img-1.jpg" class="food-img">
+                    <img src="/images/gallery-img-1.jpg" class="food-img" />
                     <h3 class="food-name">Pancakes</h3>
-                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error odio
-                        nemo consequatur fuga, quisquam harum corporis modi assumenda, molestiae blanditiis qui unde
-                        earum dolores. Omnis facilis inventore nulla in aut!</p>
+                    <p class="food-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                        commodi possimus iure hic excepturi. Corporis!
+                    </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="images/gallery-img-2.jpg" class="food-img">
-                    <h3 class="food-name">Cup Cakes</h3>
-                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error odio
-                        nemo consequatur fuga, quisquam harum corporis modi assumenda, molestiae blanditiis qui unde
-                        earum dolores. Omnis facilis inventore nulla in aut!</p>
+                    <img src="/images/gallery-img-2.jpg" class="food-img" />
+                    <h3 class="food-name">Cupcakes</h3>
+                    <p class="food-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                        commodi possimus iure hic excepturi. Corporis!
+                    </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="images/gallery-img-3.jpg" class="food-img">
+                    <img src="/images/gallery-img-3.jpg" class="food-img" />
                     <h3 class="food-name">Hummus</h3>
-                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error odio
-                        nemo consequatur fuga, quisquam harum corporis modi assumenda, molestiae blanditiis qui unde
-                        earum dolores. Omnis facilis inventore nulla in aut!</p>
+                    <p class="food-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                        commodi possimus iure hic excepturi. Corporis!
+                    </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="images/gallery-img-4.jpg" class="food-img">
+                    <img src="/images/gallery-img-4.jpg" class="food-img" />
                     <h3 class="food-name">Hamburger</h3>
-                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error odio
-                        nemo consequatur fuga, quisquam harum corporis modi assumenda, molestiae blanditiis qui unde
-                        earum dolores. Omnis facilis inventore nulla in aut!</p>
+                    <p class="food-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                        commodi possimus iure hic excepturi. Corporis!
+                    </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="images/gallery-img-5.jpg" class="food-img">
+                    <img src="/images/gallery-img-5.jpg" class="food-img" />
                     <h3 class="food-name">Salmon</h3>
-                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error odio
-                        nemo consequatur fuga, quisquam harum corporis modi assumenda, molestiae blanditiis qui unde
-                        earum dolores. Omnis facilis inventore nulla in aut!</p>
+                    <p class="food-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                        commodi possimus iure hic excepturi. Corporis!
+                    </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="images/gallery-img-6.jpg" class="food-img">
+                    <img src="/images/gallery-img-6.jpg" class="food-img" />
                     <h3 class="food-name">Vegetables</h3>
-                    <p class="food-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error odio
-                        nemo consequatur fuga, quisquam harum corporis modi assumenda, molestiae blanditiis qui unde
-                        earum dolores. Omnis facilis inventore nulla in aut!</p>
+                    <p class="food-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                        commodi possimus iure hic excepturi. Corporis!
+                    </p>
                 </a>
             </div>
         </section>
