--- a/Foods/index.html
+++ b/Foods/index.html
@@ -37,7 +37,7 @@
             <span>Contact</span>
         </a>
     </nav>
-    <div class="menu"></div>
+    <div class="menu target"></div>
     <!-- End of Navbar  -->
 
 
