added descriptions for foods and box-shadow drop-down

--- a/Foods/index.html
+++ b/Foods/index.html
@@ -92,48 +92,43 @@
                     <img src="/images/gallery-img-1.jpg" class="food-img" />
                     <h3 class="food-name">Pancakes</h3>
                     <p class="food-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-                        commodi possimus iure hic excepturi. Corporis!
+                        Thin stacked pancakes topped with maple syrup and fresh raspberries.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
                     <img src="/images/gallery-img-2.jpg" class="food-img" />
                     <h3 class="food-name">Cupcakes</h3>
                     <p class="food-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-                        commodi possimus iure hic excepturi. Corporis!
+                        Chocolate cupcakes with carmel frosting topped with candied ginger.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
                     <img src="/images/gallery-img-3.jpg" class="food-img" />
                     <h3 class="food-name">Hummus</h3>
                     <p class="food-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-                        commodi possimus iure hic excepturi. Corporis!
+                        Toast topped with hummus, made from cooked, mashed chickpeas blended with tahini, lemon juice,
+                        and garlic.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
                     <img src="/images/gallery-img-4.jpg" class="food-img" />
                     <h3 class="food-name">Hamburger</h3>
                     <p class="food-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-                        commodi possimus iure hic excepturi. Corporis!
+                        Hamburger with cheddar cheese, pickles, onion, tomato, and spinach on a sesame bun.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
                     <img src="/images/gallery-img-5.jpg" class="food-img" />
                     <h3 class="food-name">Salmon</h3>
                     <p class="food-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-                        commodi possimus iure hic excepturi. Corporis!
+                        Pan seared teriyaki salmon topped with sesame, seaweed, and green onion.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
                     <img src="/images/gallery-img-6.jpg" class="food-img" />
                     <h3 class="food-name">Vegetables</h3>
                     <p class="food-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-                        commodi possimus iure hic excepturi. Corporis!
+                        Fresh broccoli, tomatoes, cucumbers, peppers, and cilantro.
                     </p>
                 </a>
             </div>
