changed icons and images to beverages

--- a/Foods/index.html
+++ b/Foods/index.html
@@ -21,16 +21,17 @@
             <span>Home</span>
         </a>
         <a href="#" class="navbar-link">
-            <i class="fas fa-utensils"></i>
-            <span>Meals</span>
+            <i class="fas fa-beer"></i>
+            <span>Beer</span>
         </a>
         <a href="#" class="navbar-link">
             <i class="fas fa-hamburger"></i>
-            <span>Burger</span>
+            <span>Wine</span>
         </a>
         <a href="#" class="navbar-link">
-            <i class="fas fa-pizza-slice"></i>
-            <span>Pizza</span>
+            <i class="fas fa-cocktail"></i>
+
+            <span>Mixed</span>
         </a>
         <a href="#" class="navbar-link">
             <i class="fas fa-blender-phone"></i>
@@ -44,18 +45,18 @@
     <div class="container">
         <!-- Section 1 -->
         <section class="section-1">
-            <h1 class="section-heading">Variety of Foods</h1>
+            <h1 class="section-heading">Variety of Beverages</h1>
             <div class="section-1-icons">
-                <i class="change fas fa-egg"></i>
-                <i class="fas fa-stroopwafel"></i>
-                <i class="fas fa-cheese"></i>
-                <i class="fas fa-hotdog"></i>
-                <i class="fas fa-drumstick-bite"></i>
-                <i class="fas fa-apple-alt"></i>
-                <i class="fas fa-ice-cream"></i>
-                <i class="fas fa-fish"></i>
-                <i class="fas fa-cookie"></i>
-                <i class="fas fa-seedling"></i>
+                <i class="change fas fa-beer"></i>
+                <i class="fas fa-cocktail"></i>
+                <i class="fas fa-wine-glass-alt"></i>
+                <i class="fas fa-glass-martini-alt"></i>
+                <i class="fas fa-glass-whiskey"></i>
+                <i class="fas fa-blender"></i>
+                <i class="fas fa-wine-bottle"></i>
+                <i class="fas fa-glass-cheers"></i>
+                <i class="fas fa-glass-martini"></i>
+                <i class="fas fa-mug-hot"></i>
             </div>
         </section>
         <!-- End Section 1 -->
@@ -89,44 +90,44 @@
             <h1 class="section-heading">Gallery</h1>
             <div class="gallery">
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="/images/gallery-img-1.jpg" class="food-img" />
-                    <h3 class="food-name">Pancakes</h3>
+                    <img src="/images/wine.jpeg" class="food-img" />
+                    <h3 class="food-name">Red</h3>
                     <p class="food-description">
                         Thin stacked pancakes topped with maple syrup and fresh raspberries.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="/images/gallery-img-2.jpg" class="food-img" />
-                    <h3 class="food-name">Cupcakes</h3>
+                    <img src="/images/whitewine.jpeg" class="food-img" />
+                    <h3 class="food-name">White</h3>
                     <p class="food-description">
                         Chocolate cupcakes with carmel frosting topped with candied ginger.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="/images/gallery-img-3.jpg" class="food-img" />
-                    <h3 class="food-name">Hummus</h3>
+                    <img src="/images/beer.jpeg" class="food-img" />
+                    <h3 class="food-name">Beer</h3>
                     <p class="food-description">
                         Toast topped with hummus, made from cooked, mashed chickpeas blended with tahini, lemon juice,
                         and garlic.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="/images/gallery-img-4.jpg" class="food-img" />
-                    <h3 class="food-name">Hamburger</h3>
+                    <img src="/images/moscow.jpeg" class="food-img" />
+                    <h3 class="food-name">Moscow</h3>
                     <p class="food-description">
                         Hamburger with cheddar cheese, pickles, onion, tomato, and spinach on a sesame bun.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="/images/gallery-img-5.jpg" class="food-img" />
-                    <h3 class="food-name">Salmon</h3>
+                    <img src="/images/mixed.jpeg" class="food-img" />
+                    <h3 class="food-name">Mixed</h3>
                     <p class="food-description">
                         Pan seared teriyaki salmon topped with sesame, seaweed, and green onion.
                     </p>
                 </a>
                 <a href="#" class="gallery-link" title="Order Now">
-                    <img src="/images/gallery-img-6.jpg" class="food-img" />
-                    <h3 class="food-name">Vegetables</h3>
+                    <img src="/images/whiskey.jpeg" class="food-img" />
+                    <h3 class="food-name">Whiskey</h3>
                     <p class="food-description">
                         Fresh broccoli, tomatoes, cucumbers, peppers, and cilantro.
                     </p>
