--- a/Creative Design/index.html
+++ b/Creative Design/index.html
@@ -26,6 +26,63 @@
             </div>
         </section>
         <!-- END OF SECTION 1 -->
+
+        <!-- SECTION 2  -->
+        <section class="section-2">
+            <h1 class="section-heading">Customers</h1>
+            <div class="customers-wraper">
+                <!-- CUSTOMER 1 -->
+                <div class="customer">
+                    <i class="fas fa-quote-left"></i>
+                    <p class="customer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, autem
+                        cupiditate sed magni corporis quasi deleniti explicabo consequatur molestiae! Eveniet hic
+                        deserunt nemo provident officiis dicta ducimus exercitationem, nisi nobis?</p>
+                    <div class="customer-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <img src="images/customer-img-1.jpg" class="customer-img">
+                    <h4 class="customer-name">Jane Lee</h4>
+                </div>
+                <!-- CUSTOMER 2 -->
+                <div class="customer">
+                    <i class="fas fa-quote-left"></i>
+                    <p class="customer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, autem
+                        cupiditate sed magni corporis quasi deleniti explicabo consequatur molestiae! Eveniet hic
+                        deserunt nemo provident officiis dicta ducimus exercitationem, nisi nobis?</p>
+                    <div class="customer-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <img src="images/customer-img-2.jpg" class="customer-img">
+                    <h4 class="customer-name">Bob Smith</h4>
+                </div>
+                <!-- CUSTOMER 3 -->
+                <div class="customer">
+                    <i class="fas fa-quote-left"></i>
+                    <p class="customer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, autem
+                        cupiditate sed magni corporis quasi deleniti explicabo consequatur molestiae! Eveniet hic
+                        deserunt nemo provident officiis dicta ducimus exercitationem, nisi nobis?</p>
+                    <div class="customer-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <img src="images/customer-img-3.jpg" class="customer-img">
+                    <h4 class="customer-name">Ann Brown</h4>
+                </div>
+            </div>
+        </section>
+
+        <!-- END OF SECTION 2 -->
     </div>
 
     <script src="script.js"></script>
