--- a/Creative Design/index.html
+++ b/Creative Design/index.html
@@ -81,8 +81,84 @@
                 </div>
             </div>
         </section>
-
         <!-- END OF SECTION 2 -->
+
+        <!-- SECTION 3 -->
+        <section class="section-3">
+            <h1 class="section-heading">TEAM</h1>
+            <div class="team-wrapper">
+                <!-- TEAM MEMEBER 1 -->
+                <div class="team-member">
+                    <img src="images/team-member-1.jpg" class="team-member-img">
+                    <h2 class="team-member-name">Nick Smith <span>(Designer)</span> </h2>
+                    <ul class="team-member-skills">
+                        <li>Phototshop</li>
+                        <li>Figma</li>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>Ai</li>
+                    </ul>
+                    <a href="#" class="projects-btn">Projects</a>
+                    <div class="story-btn" title="My Story">
+                        <div class="story-btn-line"></div>
+                    </div>
+                    <div class="story">
+                        <h4 class="story-heading">About Me</h4>
+                        <p class="story-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur,
+                            assumenda et incidunt ut doloribus dolorum alias necessitatibus vero architecto minus dolore
+                            omnis? Ut dolorum, exercitationem dolore quis labore non rerum?
+                        </p>
+                    </div>
+                </div>
+                <!-- TEAM MEMEBER 2 -->
+                <div class="team-member">
+                    <img src="images/team-member-2.jpg" class="team-member-img">
+                    <h2 class="team-member-name">Bob Brown <span>(Designer)</span> </h2>
+                    <ul class="team-member-skills">
+                        <li>AE</li>
+                        <li>PR</li>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>Inkscape</li>
+                    </ul>
+                    <a href="#" class="projects-btn">Projects</a>
+                    <div class="story-btn" title="My Story">
+                        <div class="story-btn-line"></div>
+                    </div>
+                    <div class="story">
+                        <h4 class="story-heading">About Me</h4>
+                        <p class="story-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur,
+                            assumenda et incidunt ut doloribus dolorum alias necessitatibus vero architecto minus dolore
+                            omnis? Ut dolorum, exercitationem dolore quis labore non rerum?
+                        </p>
+                    </div>
+                </div>
+                <!-- TEAM MEMEBER 3 -->
+                <div class="team-member">
+                    <img src="images/team-member-3.jpg" class="team-member-img">
+                    <h2 class="team-member-name">Johnny Meow <span>(Developer)</span> </h2>
+                    <ul class="team-member-skills">
+                        <li>JavaScript</li>
+                        <li>React.js</li>
+                        <li>Node.js</li>
+                        <li>MongoDB</li>
+                        <li>Python</li>
+                    </ul>
+                    <a href="#" class="projects-btn">Projects</a>
+                    <div class="story-btn" title="My Story">
+                        <div class="story-btn-line"></div>
+                    </div>
+                    <div class="story">
+                        <h4 class="story-heading">About Me</h4>
+                        <p class="story-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur,
+                            assumenda et incidunt ut doloribus dolorum alias necessitatibus vero architecto minus dolore
+                            omnis? Ut dolorum, exercitationem dolore quis labore non rerum?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- END OF SECTION 3 -->
     </div>
 
     <script src="script.js"></script>
