--- a/Creative Design/index.html
+++ b/Creative Design/index.html
@@ -136,7 +136,7 @@
                 <!-- TEAM MEMEBER 3 -->
                 <div class="team-member">
                     <img src="images/team-member-3.jpg" class="team-member-img">
-                    <h2 class="team-member-name">Johnny Meow <span>(Developer)</span> </h2>
+                    <h2 class="team-member-name">John Doe <span>(Developer)</span> </h2>
                     <ul class="team-member-skills">
                         <li>JavaScript</li>
                         <li>React.js</li>
