finished contact css

--- a/Creative Design/index.html
+++ b/Creative Design/index.html
@@ -161,18 +161,20 @@
         <!-- END OF SECTION 3 -->
 
         <!-- SECTION 4 -->
-        <section class="section-4">
+        <section class="section-4" id="contact">
             <h1 class="section-heading">Contact</h1>
             <div class="form-container">
                 <img src="images/form-img.png" class="form-img">
                 <form class="contact-form">
-                    <input type="text placeholder=" Your Name">
+                    <input type="text" placeholder="Your Name">
                     <input type="email" placeholder="Your Email">
                     <textarea placeholder="Your Message"></textarea>
                     <input type="submit" value="Send">
                 </form>
             </div>
-            <p class="copyright">Copyright &copy; CodeAndCreate All Rights Reserved</p>
+            <p class="copyright">
+                Copyright &copy; CodeAndCreate All Rights Reserved
+            </p>
         </section>
         <!-- END OF SECTION 4 -->
     </div>
