added page navigation and scroll up button

--- a/Creative Design/index.html
+++ b/Creative Design/index.html
@@ -12,12 +12,12 @@
 <body>
     <div class="container">
         <!-- SECTION 1 -->
-        <section class="section-1">
+        <section class="section-1" id="home">
             <nav class="navbar">
-                <a href="#" class="navbar-link">Design</a>
-                <a href="#" class="navbar-link">Cutomers</a>
-                <a href="#" class="navbar-link">Team</a>
-                <a href="#" class="navbar-link">Contact</a>
+                <a href="#home" class="navbar-link">Design</a>
+                <a href="#customers" class="navbar-link">Cutomers</a>
+                <a href="#team" class="navbar-link">Team</a>
+                <a href="#contact" class="navbar-link">Contact</a>
             </nav>
             <div class="floating-bg"></div>
             <h1 class="section-1-heading">Creative Design</h1>
@@ -28,11 +28,11 @@
         <!-- END OF SECTION 1 -->
 
         <!-- SECTION 2  -->
-        <section class="section-2">
+        <section class="section-2" id="customers">
             <h1 class="section-heading">Customers</h1>
             <div class="customers-wraper">
                 <!-- CUSTOMER 1 -->
-                <div class="customer">
+                <div class="customer" id="customer">
                     <i class="fas fa-quote-left"></i>
                     <p class="customer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, autem
                         cupiditate sed magni corporis quasi deleniti explicabo consequatur molestiae! Eveniet hic
@@ -84,7 +84,7 @@
         <!-- END OF SECTION 2 -->
 
         <!-- SECTION 3 -->
-        <section class="section-3">
+        <section class="section-3" id="team">
             <h1 class="section-heading">TEAM</h1>
             <div class="team-wrapper">
                 <!-- TEAM MEMEBER 1 -->
@@ -177,6 +177,10 @@
             </p>
         </section>
         <!-- END OF SECTION 4 -->
+
+        <a href="#home" class="scroll-up-btn">
+            <i class="fas fa-arrow-up"></i>
+        </a>
     </div>
 
     <script src="script.js"></script>
