--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Oswald:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Business Agency</title>
 </head>
@@ -16,11 +20,11 @@
             <div class="banner">
                 <h1 class="banner-heading">
                     <span class="heading-1">Business Ideas</span>
-                    <span class="heading-2">Consulting</span>
+                    <!-- <span class="heading-2">Consulting</span>
                     <span class="heading-3">Digital Marketing</span>
-                    <span class="heading-4">Strategy</span>
+                    <span class="heading-4">Strategy</span> -->
                 </h1>
-                <p class="banner-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p class="banner-paragraph">Lorem ipsum dolor sit.</p>
                 <button class="banner-btn">Discover Now</button>
             </div>
 
