--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -15,6 +15,31 @@
 </head>
 
 <body>
+
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <div class="logo">
+            <a href="#"><span>C</span>ode<span>A</span>nd<span>C</span>reate</a>
+        </div>
+        <div class="nav-list">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">Pricing</a>
+            <a href="#" class="nav-link">Blog</a>
+            <a href="#" class="nav-link">Contact</a>
+        </div>
+    </nav>
+    <!-- END OF NAVBAR -->
+
+    <!-- MENU -->
+    <div class="menu">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+    </div>
+    <!-- END MENU -->
+
+    <!-- SECTION 1 LANDING  -->
     <div class="container">
         <section class="section-1">
             <div class="banner">
@@ -29,8 +54,7 @@
             </div>
 
         </section>
-        <!-- SECTION 1 -->
-        <!-- END OF SECTION1 -->
+        <!-- END OF SECTION 1 LANDING -->
     </div>
     <script src="script.js"></script>
 </body>
