fixed styling issue with navbar and logo

--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -10,9 +10,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Oswald:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Notable&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Notable&display=swap" rel="stylesheet">
     <title>Business Agency</title>
 </head>
 
@@ -20,8 +20,10 @@
 
     <!-- NAVBAR -->
     <nav class="navbar">
-        <div class="logo">
-            <a href="#"><span>C</span>ode<span>A</span>nd<span>C</span>reate</a>
+        <div class="navbar-logo">
+            <a href="#">
+                <span>C</span>ode<span>A</span>nd<span>C</span>reate
+            </a>
         </div>
         <div class="nav-list">
             <a href="#" class="nav-link">Home</a>
