--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -59,6 +59,32 @@
 
         </section>
         <!-- END OF SECTION 1 LANDING -->
+
+        <!-- SECTION 2 ABOUT US  -->
+        <section class="section-2">
+            <h1 class="section-heading">About Us</h1>
+            <div class="section-heading-line"></div>
+            <div class="video-wraper">
+                <video class="video" src="images/about-us-video.mp4"></video>
+                <div class="controls">
+                    <div class="video-bar-wrapper">
+                        <div class="video-bar"></div>
+                    </div>
+                    <div class="buttons">
+                        <button>
+                            <i class="far fa-play-circle"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <p class="section-2-paragraph">
+                <i class="fas fa-quote-left"></i>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio fuga aut incidunt distinctio unde laborum
+                consectetur libero eaque velit aperiam error ex quo mollitia, vero consequatur, eos hic repellat at!
+                <i class="fas fa-quote-right"></i>
+            </p>
+        </section>
+        <!-- END OF SECTION 2 ABOUT US  -->
     </div>
     <script src="script.js"></script>
 </body>
