--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -64,7 +64,7 @@
         <section class="section-2">
             <h1 class="section-heading">About Us</h1>
             <div class="section-heading-line"></div>
-            <div class="video-wraper">
+            <div class="video-wrapper">
                 <video class="video" src="images/about-us-video.mp4"></video>
                 <div class="controls">
                     <div class="video-bar-wrapper">
