added swiper.js to pricing cards

--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Notable&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <title>Business Agency</title>
 </head>
 
@@ -212,10 +213,7 @@
                                 <li>
                                     <i class="fas fa-check"></i>
                                     <span>Pricing Card Item</span>
-                                </li>
-                                <i class="fas fa-check"></i>
-                                <span>Pricing Card Item</span>
-                                </li>
+
                             </ul>
                             <button class="pricing-card-btn btn-premium">Choose Plan</button>
                         </div>
@@ -229,6 +227,7 @@
         <!-- END OF SECTION 3 - PRICING -->
     </div>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
 </body>
 
 </html>
