completed contact information html section

--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -121,9 +121,7 @@
                             </ul>
                             <button class="pricing-card-btn btn-free">Choose Plan</button>
                         </div>
-                        <div class="pricing-card-back back-free">
-                            <a href="#">Order Now</a>
-                        </div>
+
                     </div>
                     <div class="pricing-card swiper-slide">
                         <div class="pricing-card-front">
@@ -153,9 +151,7 @@
                             </ul>
                             <button class="pricing-card-btn btn-basic">Choose Plan</button>
                         </div>
-                        <div class="pricing-card-back back-basic">
-                            <a href="#">Order Now</a>
-                        </div>
+
                     </div>
                     <div class="pricing-card swiper-slide">
                         <div class="pricing-card-front">
@@ -184,9 +180,6 @@
                                 </li>
                             </ul>
                             <button class="pricing-card-btn btn-standard">Choose Plan</button>
-                        </div>
-                        <div class="pricing-card-back back-standard">
-                            <a href="#">Order Now</a>
                         </div>
                     </div>
                     <div class="pricing-card swiper-slide">
@@ -217,14 +210,47 @@
                             </ul>
                             <button class="pricing-card-btn btn-premium">Choose Plan</button>
                         </div>
-                        <div class="pricing-card-back back-premium">
-                            <a href="#">Order Now</a>
-                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- END OF SECTION 3 - PRICING -->
+
+        <!-- SECTION 4 -->
+        <section class="section-4">
+            <h1 class="section-heading">Contact</h1>
+            <div class="div section-heading-line"></div>
+            <div class="content-wrapper">
+                <div class="div contact-details">
+                    <div class="phone">
+                        <i class="fas fa-mobile-alt"></i>
+                        <h3>Phone</h3>
+                        <p>(510) 456-7951</p>
+                        <p>(510) 987-3254</p>
+                    </div>
+                    <div class="address">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <h3>Address</h3>
+                        <p>154 Main Street</p>
+                        <p>357 Wall Street</p>
+                    </div>
+                    <div class="email">
+                        <i class="far fa-envelope"></i>
+                        <h3>Email</h3>
+                        <p>support@gmail.com</p>
+                        <p>sales@gmail.com</p>
+                    </div>
+                </div>
+                <h1>Get in Touch</h1>
+                <form action="" class="content-form">
+                    <input type="text" placeholder="Your Name">
+                    <input type="email" placeholder="Your Email">
+                    <textarea placeholder="Your Message"></textarea>
+                    <input type="submit" value="Send Message">
+                </form>
+            </div>
+        </section>
+        <!-- END OF SECTION 4 -->
     </div>
     <script src="script.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
