added styling to the contact section and fixed typo in html

--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -219,8 +219,8 @@
         <!-- SECTION 4 -->
         <section class="section-4">
             <h1 class="section-heading">Contact</h1>
-            <div class="div section-heading-line"></div>
-            <div class="content-wrapper">
+            <div class="section-heading-line"></div>
+            <div class="contact-wrapper">
                 <div class="div contact-details">
                     <div class="phone">
                         <i class="fas fa-mobile-alt"></i>
@@ -242,7 +242,7 @@
                     </div>
                 </div>
                 <h1>Get in Touch</h1>
-                <form action="" class="content-form">
+                <form action="" class="contact-form">
                     <input type="text" placeholder="Your Name">
                     <input type="email" placeholder="Your Email">
                     <textarea placeholder="Your Message"></textarea>
