completed html and css of the footer

--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -46,7 +46,7 @@
 
     <!-- SECTION 1 LANDING  -->
     <div class="container">
-        <section class="section-1">
+        <section class="section-1" id="home">
             <div class="banner">
                 <h1 class="banner-heading">
                     <span class="heading-1">Business Ideas</span>
@@ -62,7 +62,7 @@
         <!-- END OF SECTION 1 LANDING -->
 
         <!-- SECTION 2 ABOUT US  -->
-        <section class="section-2">
+        <section class="section-2" id="about-us">
             <h1 class="section-heading">About Us</h1>
             <div class="section-heading-line"></div>
             <div class="video-wrapper">
@@ -217,7 +217,7 @@
         <!-- END OF SECTION 3 - PRICING -->
 
         <!-- SECTION 4 -->
-        <section class="section-4">
+        <section class="section-4" id="contact">
             <h1 class="section-heading">Contact</h1>
             <div class="section-heading-line"></div>
             <div class="contact-wrapper">
@@ -251,6 +251,18 @@
             </div>
         </section>
         <!-- END OF SECTION 4 -->
+
+        <!-- FOOTER  -->
+        <footer class="footer">
+            <div class="footer-nav">
+                <a href="#home">HOME</a>
+                <a href="#about-us">ABOUT US</a>
+                <a href="#pricing">PRICING</a>
+                <a href="#contact">CONTACT</a>
+            </div>
+            <p class="copyright">Copyright &copy; CodeAndCreate All Rights Reserved</p>
+        </footer>
+        <!-- END OF FOOTER  -->
     </div>
     <script src="script.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
