--- a/business_agency/index.html
+++ b/business_agency/index.html
@@ -54,7 +54,7 @@
                     <span class="heading-3">Digital Marketing</span>
                     <span class="heading-4">Strategy</span>
                 </h1>
-                <p class="banner-paragraph">Lorem ipsum dolor sit.</p>
+                <p class="banner-paragraph">Lorem ipsum</p>
                 <button class="banner-btn">Discover Now</button>
             </div>
 
