--- a/apple_ecommerce/index.html
+++ b/apple_ecommerce/index.html
@@ -5,11 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apple eCommerce</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
 </head>
 
 <body>
+    <div class="container">
+        <!-- SECTION 1 -->
+        <section class="section-1">
+            <a href="#" class="logo">
+                <i class="fab fa-apple"></i>
+            </a>
+            <nav class="navbar">
+                <a href="#" class="navbar-link">iPhone 12</a>
+                <a href="#" class="navbar-link">MacBook Air</a>
+                <a href="#" class="navbar-link">Watch</a>
+                <a href="#" class="navbar-link">Air Pods</a>
+            </nav>
+            <div class="section-1-nbanner">
+                <h1>&#8592; Best Gift</h1>
+                <p>"Creativity is just connecting thigs"</p>
+                <span> - Steve Jobs</span>
+                <button class="button">Buy Now</button>
+            </div>
+        </section>
+        <!-- END OF SECTION 1 -->
 
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
