--- a/apple_ecommerce/index.html
+++ b/apple_ecommerce/index.html
@@ -25,9 +25,9 @@
                 <a href="#" class="navbar-link">Watch</a>
                 <a href="#" class="navbar-link">Air Pods</a>
             </nav>
-            <div class="section-1-nbanner">
+            <div class="section-1-banner center">
                 <h1>&#8592; Best Gift</h1>
-                <p>"Creativity is just connecting thigs"</p>
+                <p>"Creativity is just connecting things"</p>
                 <span> - Steve Jobs</span>
                 <button class="button">Buy Now</button>
             </div>
