created slideshow for landing page

--- a/apple_ecommerce/index.html
+++ b/apple_ecommerce/index.html
@@ -31,6 +31,10 @@
                 <span> - Steve Jobs</span>
                 <button class="button">Buy Now</button>
             </div>
+
+            <!-- Slideshow -->
+            <div class="slideshow"></div>
+            <!-- End of Slideshow -->
         </section>
         <!-- END OF SECTION 1 -->
 
