creating 3D box for apple iphone

--- a/apple_ecommerce/index.html
+++ b/apple_ecommerce/index.html
@@ -25,6 +25,20 @@
                 <a href="#" class="navbar-link">Watch</a>
                 <a href="#" class="navbar-link">Air Pods</a>
             </nav>
+
+            <!-- CUBE -->
+            <div class="cube-wrapper">
+                <div class="cube">
+                    <div class="font-side">
+                        <img src="images/iphone.png" alt="iphone">
+                    </div>
+                    <div class="back-side center">
+                        <i class="fab fa-apple"></i>
+                    </div>
+                </div>
+            </div>
+            <!-- END OF CUBE -->
+
             <div class="section-1-banner center">
                 <h1>&#8592; Best Gift</h1>
                 <p>"Creativity is just connecting things"</p>
@@ -32,11 +46,14 @@
                 <button class="button">Buy Now</button>
             </div>
 
-            <!-- Slideshow -->
             <div class="slideshow"></div>
-            <!-- End of Slideshow -->
+
+
+
         </section>
         <!-- END OF SECTION 1 -->
+
+
 
     </div>
 
